Prevent Alliance logo too wide and don't scroll paging

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -51,6 +51,13 @@
   padding-top: 16px;
 }
 
+/** On super small displays make sure the
+Alliance logo doesn't make the footer wider
+than the full width of the display **/
+#geo-footer-img > a > img {
+  max-width: calc(100vw - 30px);
+}
+
 #geo-footer-links {
   display: table-cell;
   font-size: small;
